--- a/Lista1/styles.css
+++ b/Lista1/styles.css
@@ -54,14 +54,14 @@ h3{
 ul{
     list-style-type:armenian;   
 }
+li{
+    margin-left:1.4em;
+}
 
 .omnie{
-    display:block;
-    width:50vw;
     font-size: 1.3em;
 }
 img{
-    margin-top:-9vh;
     margin-right:1vw;
     margin-bottom: 1vh;
     width: 25vw;
@@ -80,10 +80,23 @@ h1{
     text-align: center;
 }
 
+.col-1 {width: 8.33%};
+.col-2 {width: 16.66%};
+.col-3 {width: 25%};
+.col-4 {width: 33.33%};
+.col-5 {width: 41.66%};
+.col-6 {width: 50%};
+.col-7 {width: 58.33%};
+.col-8 {width: 66.66%};
+.col-9 {width: 75%};
+.col-10 {width: 83.33%};
+.col-11 {width: 91.66%};
+.col-12 {width: 100%};
+
 @media only screen and (max-width: 450px){
     #heading {
             background-color: transparent;
-            font-size: 70px;
+            font-size: 65px;
             text-align: center;
             -webkit-text-fill-color: transparent;
             -webkit-text-stroke-color: black;
@@ -94,7 +107,6 @@ h1{
         margin:0;
     }
     img{
-        margin-top:-25vh;
         width:40vw;
     }
 }
