--- a/Lista1/styles.css
+++ b/Lista1/styles.css
@@ -14,12 +14,12 @@
     width: 100vw;
     height:65vh;  
 }*/
-div{
+.ey{
     height:100vh;
     display:flex;
     justify-content: center;
     align-items: center;
-    background: url(pexels-eberhard-grossgasteiger-1287145.jpg);
+    background: url(zdjęcia/pexels-eberhard-grossgasteiger-1287145.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
@@ -33,14 +33,18 @@ div{
 
 nav{
     background-color: grey;
+    width:100%;
+    overflow: auto;
 }
 .linki{
+    float:left;
     color:white;
     background-color: rgba(0,0,0,0);
     font-weight: 900;
     font-size:1.5em;
     text-decoration: none;
-    margin: 4.5vw;
+    width:33.3%;
+    text-align: center;
 }
 
 a:hover{
@@ -80,33 +84,62 @@ h1{
     text-align: center;
 }
 
-.col-1 {width: 8.33%};
-.col-2 {width: 16.66%};
-.col-3 {width: 25%};
-.col-4 {width: 33.33%};
-.col-5 {width: 41.66%};
-.col-6 {width: 50%};
-.col-7 {width: 58.33%};
-.col-8 {width: 66.66%};
-.col-9 {width: 75%};
-.col-10 {width: 83.33%};
-.col-11 {width: 91.66%};
-.col-12 {width: 100%};
+pre{
+    background-color: black;
+}
+code{
+    background-color:black;
+    color:green;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
-@media only screen and (max-width: 450px){
+div.images{
+    display:flex;
+    flex-flow:column;
+}
+div.images div.row{
+    display: flex;
+    flex-flow:row;
+    width:100%;
+}
+div.images img{
+    width:25%;
+    margin:0;
+    padding:0;
+}
+
+
+@media only screen and (max-width: 500px){
     #heading {
-            background-color: transparent;
-            font-size: 65px;
-            text-align: center;
-            -webkit-text-fill-color: transparent;
-            -webkit-text-stroke-color: black;
-            -webkit-text-stroke-width: 2px;
+            font-size:65px;
         }
     .linki{
         display:flex;
         margin:0;
+        width:100vw;
     }
     img{
-        width:40vw;
+        margin-top:5vh;
+        width:50vw;
+    }
+
+        div.images {
+            display: flex;
+            flex-flow: column;
+        }
+    
+        div.images div.row {
+            display: flex;
+            flex-flow: column;
+        }
+    
+        div.images img {
+            width: 100vw;
+            margin: 0;
+        }
+        
+    code{
+        text-align: left;
+        font-size:0.65em;  
     }
 }
